--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="FBRP"
     />
-    <link rel="apple-touch-icon" href="./images/circleLogo.png" />
+    <link rel="apple-touch-icon" href="./images/circleLogo.png" crossorigin="anonymous"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
