--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="FBRP"
+      content="FREE BASE RED PILL"
     />
     <link rel="apple-touch-icon" href="./images/circleLogo.png" crossorigin="anonymous"/>
     <!--
